// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixInstructionPanelTests render all checks 1`] = `
<DocumentFragment>
  <div>
    <div>
      Fix ALL of the following:
    </div>
    <ul>
      <li>
        message
      </li>
      <li>
        message
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`FixInstructionPanelTests render instruction only one check 1`] = `
<DocumentFragment>
  <div>
    <div>
      Fix the following:
    </div>
    <ul>
      <li>
        message
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`FixInstructionPanelTests render none checks 1`] = `
<DocumentFragment>
  <div>
    <div>
      Fix ALL of the following:
    </div>
    <ul>
      <li>
        message
      </li>
      <li>
        message
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`FixInstructionPanelTests render nothing 1`] = `<DocumentFragment />`;
